<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/container" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/users_inicio" />

            <TextView
                android:id="@+id/bienvenida"
                android:layout_below="@+id/imageView1"
                android:layout_centerHorizontal="true"
                android:text="@string/bienvenida"
                style="@style/title_white" />

            <TextView
                android:id="@+id/descripcion"
                android:layout_below="@+id/bienvenida"
                android:layout_centerHorizontal="true"
                android:text="@string/descripcion"
                style="@style/sub_title_white" />

            <Button
                android:id="@+id/ingresar"
                style="@style/boton"
                android:layout_below="@+id/descripcion"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:onClick="ingresar"
                android:text="@string/ingresar" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
